# fribidi-historic

./: ANNOUNCE  AUTHORS  ChangeLog  CreateGetType.pl  INSTALL  Makefile.am  Makefile.in  README  THANKS  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  fribidi-config.in  fribidi.c  fribidi.h  fribidi_benchmark.c  fribidi_char_sets.c  fribidi_char_sets.h  fribidi_get_type.c  fribidi_main.c  fribidi_tables.i  fribidi_types.h  fribidi_utils.c  run.tests  test.reference  test_fribidi.c
tests/: test-capital-rtl  test-hebrew
