AC_INIT(README)

PACKAGE=fribidi
VERSION=0.1.13
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

AM_CONFIG_HEADER(config.h)

dnl Initialize libtool
AM_PROG_LIBTOOL

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AM_PATH_GLIB_2_0(1.3.1,,
  [AM_PATH_GLIB(1.2.0,,
    AC_MSG_ERROR(Test for GLIB failed. See the file 'INSTALL' for help.))])

AC_OUTPUT([
Makefile
fribidi-config
],[case "$CONFIG_FILES" in
*fribidi-config*)chmod +x fribidi-config;;
esac])
